Fixed README typo.

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Fragria is implemented as a framework that supports both reference counting and 
 
 Thanks to Rui Pacheco for the RC changes.
  
-Other information regarding the originial source may be availble:
+Other information regarding the original source may be availble:
 http://sourceforge.net/projects/smultron/files/smultron
 http://www.fraiseapp.com/
 
